# wb_analist

./: .gitignore  Instruction.md  README.md  latest.json
docs/: PRODUCT_ROADMAP.md  in_job.md
wb_finance_analyst/: README.md  WB analyst v1.0.spec  main.py  pyproject.toml  requirements.txt
wb_finance_analyst/docs/: TEST_PLAN_V1_0.md
wb_finance_analyst/src/wb_finance_analyst/: __init__.py  app.py  version.py
wb_finance_analyst/src/wb_finance_analyst/config/: column_aliases.py  defaults.py  settings.py
wb_finance_analyst/src/wb_finance_analyst/domain/: constants.py  enums.py  models.py
wb_finance_analyst/src/wb_finance_analyst/resources/: app.qss
wb_finance_analyst/src/wb_finance_analyst/services/: auto_report_service.py  business_expenses.py  column_mapper.py  cost_repository.py  excel_exporter.py  excel_loader.py  external_expenses.py  license_manager.py  load_progress.py  numeric.py  period_selection.py  product_profit_calculator.py  report_merger.py  report_period.py  report_views.py  tax_calculator.py  token_store.py  update_checker.py  validators.py  wb_api_client.py  wb_finance_api.py  wb_finance_calculator.py  wb_promotion_api.py
wb_finance_analyst/tests/: test_ads_expenses.py  test_auto_report_service.py  test_business_expenses.py  test_column_mapper.py  test_license_manager.py  test_merger.py  test_numeric.py  test_period_selection.py  test_product_profit.py  test_tax_calculator.py  test_update_checker.py  test_version.py  test_wb_api_client.py  test_wb_api_mapping.py  test_wb_finance_calculator.py
wb_finance_analyst/tools/: license_calculator.py
(+26 files in other folders)
